crates/canopy/tests/snapshots/golden_snapshots__underspec_lexical_ambiguity.snap
---
source: crates/canopy/tests/golden_snapshots.rs
expression: result
---
{
  "input": "The bank collapsed",
  "reading_count": 2,
  "is_ambiguous": true,
  "ambiguity_summary": {
    "lexical": 1,
    "structural": 0,
    "scope": 0,
    "referential": 0,
    "total": 2
  }
}
